--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -3,6 +3,7 @@ on:
   push:
     branches:
     - main
+    - release/*
     paths-ignore:
     - '**/*.md'
     - '**/*.gitignore'
@@ -33,11 +34,12 @@ jobs:
       uses: actions/setup-NODE@v1
       with:
         NODE-version: ${{ env.NODE_CORE_VERSION }}
-  
-    - name: Build app
-      run: npm build "${{ env.PROJECT_PATH }}" 
-    - name: Test app
-      run: npm test "${{ env.PROJECT_PATH }}" 
+    - name: npm install, build and test
+      run: |
+        npm install
+        npm run build --if-present
+        npm test
+   
     - name: Publish app for deploy
       run: npm publish "${{ env.PROJECT_PATH }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
     - name: Publish Artifacts
