--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -37,6 +37,8 @@ jobs:
     - name: npm install, build and test
       run: |
         npm install
+        npm i sharp
+        npm audit fix
         npm run build --if-present
         npm test
    
