--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -36,11 +36,13 @@ jobs:
         NODE-version: ${{ env.NODE_CORE_VERSION }}
     - name: npm install, build and test
       run: |
+        npm config set fund false --location=global
         npm install
         npm i sharp
         npm audit fix
         npm run build --if-present
-        npm test
+       
+    
    
     - name: Publish app for deploy
       run: npm publish "${{ env.PROJECT_PATH }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
