Update artifact name

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -53,8 +53,9 @@ jobs:
     - name: Upload Build Artifact
       uses: actions/upload-artifact@v3
       with:
-        name: drop
+        name: webapp
         path: ${{ github.workspace }}/artifact
+    
     
   staging:
     needs: build
