Update snk to code

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -14,7 +14,7 @@ env:
   AZURE_WEBAPP_NAME: kgf-webb
   AZURE_WEBAPP_PACKAGE_PATH: ./published
   CONFIGURATION: Release
-  NODE_CORE_VERSION: 18.x
+  NODE_CORE_VERSION: 14.x
   PROJECT_PATH: src/app
   NODE_CLI_TELEMETRY_OPTOUT: 1
   NODE_SKIP_FIRST_TIME_EXPERIENCE: 1
@@ -42,6 +42,26 @@ jobs:
         npm audit fix
         npm run build  
      # working-directory: "${{ env.PROJECT_PATH }}"
+
+  snyk_scan:
+    name: Snyk Security Scan
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v3
+
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '14'
+
+    - name: Install Snyk and run scan
+      run: |
+        npm config set fund false --location=global
+        echo "Running Snyk security scan"
+        npm install -g snyk
+        snyk test
+      working-directory: ${{ github.workspace }}
 
     - name: Copy project files
       run: |
