--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -29,6 +29,11 @@ jobs:
     name: Build
     if: github.event_name == 'push' && contains((github.event.commits), '***NO_CI***') == false && contains(toJson(github.event.commits), '[ci skip]') == false && contains(toJson(github.event.commits), '[skip ci]') == false
     runs-on: ubuntu-latest
+    permissions:
+      actions: read
+      contents: read
+      statuses: read
+      security-events: write
     steps:
     - uses: actions/checkout@v2
     - name:  Setup Node.js  ${{ env.NODE_CORE_VERSION }}
@@ -53,6 +58,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
           command: monitor
+      
     
     - name: Copy project files
       run: |
