set azure profile

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -2,7 +2,7 @@ name: Frontmothership app deploy
 on:
   push:
     branches:
-    - main
+    - features
     - release/*
     paths-ignore:
     - '**/*.md'
