--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -53,7 +53,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: webapp
-        working-directory: "${{ env.PROJECT_PATH }}"
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
       
     
   staging:
