--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -32,7 +32,7 @@ on:
  
 env:
   AZURE_WEBAPP_NAME: kgf-webapp
-  AZURE_WEBAPP_PACKAGE_PATH: '.'
+  AZURE_WEBAPP_PACKAGE_PATH: './published'
   CONFIGURATION: Release
   NODE_CORE_VERSION: 18.x
   PROJECT_PATH: src/app
@@ -123,7 +123,7 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: webapp
-
+        
     - name: unzip artifact for deployment
       run: unzip release.zip   
 
