--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -32,7 +32,7 @@ on:
  
 env:
   AZURE_WEBAPP_NAME: kgf-webapp
-  AZURE_WEBAPP_PACKAGE_PATH: './published'
+  AZURE_WEBAPP_PACKAGE_PATH: './publish'
   CONFIGURATION: Release
   NODE_CORE_VERSION: 18.x
   PROJECT_PATH: src/app
@@ -79,7 +79,7 @@ jobs:
       with:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-        
+
   staging:
     needs: build
     name: Deploy to staging
