--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -72,8 +72,10 @@ jobs:
       working-directory: "${{ env.PROJECT_PATH }}"
     
     - name: Publish app for deploy
-      run: npm publish "${{ env.PROJECT_PATH }}" --configuration ${{ env.CONFIGURATION }} --no-build --output "${{ env.AZURE_WEBAPP_PACKAGE_PATH }}"
-   
+      run: |
+        npm ci
+        npm publish
+
     - name: Publish Artifacts
       uses: actions/upload-artifact@v1.0.0
       with:
