--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -69,6 +69,7 @@ jobs:
         npm i sharp
         npm audit fix
         npm run build  --if-present
+        npm run test --if-present
       working-directory: "${{ env.PROJECT_PATH }}"
 
     - name: Publish Artifacts
