--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -76,7 +76,7 @@ jobs:
     - name: Run Snyk to check for vulnerabilities
       uses: snyk/actions/node@master
       env:
-        SNYK_TOKEN: '${{ secrets.SNYK_TOKEN }}'
+        SNYK_TOKEN: '${{ SNYK_TOKEN }}'
   
 
     - name: Publish Artifacts
