--- a/.github/workflows/features_app-mothership.yml
+++ b/.github/workflows/features_app-mothership.yml
@@ -1,62 +1,141 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
-name: Build and deploy Node.js app to Azure Web App - app-mothership
-
+name: Frontmothership app deploy
 on:
   push:
     branches:
-      - features
+    - features
+    - release/*
+    
+    paths-ignore:
+    - '**/*.md'
+    - '**/*.gitignore'
+    - '**/*.gitattributes'
+    - '**/.next'
+    - 'node'
   workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+        type: choice
+        options:
+        - info
+        - warning
+        - debug
+      tags:
+        description: 'frontgate tags'
+        required: false
+        type: boolean
+      environment:
+        description: 'Environment '
+        type: environment
+        required: true
+ 
+env:
+  AZURE_WEBAPP_NAME: app-mothership
+  AZURE_WEBAPP_PACKAGE_PATH: '.'
+  CONFIGURATION: Release
+  NODE_CORE_VERSION: '20.x'
+  PROJECT_PATH: src/
+  NODE_CLI_TELEMETRY_OPTOUT: 1
+  NODE_SKIP_FIRST_TIME_EXPERIENCE: 1
+  NODE_NOLOGO: true
+  NODE_GENERATE_CERTIFICATE: false
+  NODE_ADD_GLOBAL_TOOLS_TO_PATH: false
+  NODE_MULTILEVEL_LOOKUP: 0
+  SNYK_TOKEN: 'da364a31-6b96-412a-b516-c4d2bf4bc8fe'
 
+permissions:
+  contents: read
+  statuses: read
+  packages: write
+  security-events: write
+  
 jobs:
   build:
+    name: Build
+    #if: github.event_name == 'push' && contains((github.event.commits), '***NO_CI***') == false && contains(toJson(github.event.commits), '[ci skip]') == false && contains(toJson(github.event.commits), '[skip ci]') == false
     runs-on: ubuntu-latest
-
+    permissions:
+      actions: read
+      contents: read
+      statuses: read
+      security-events: write
     steps:
-      - uses: actions/checkout@v4
+    - uses: actions/checkout@v2
+    - name:  Setup Node.js  ${{ env.NODE_CORE_VERSION }}
+      uses: actions/setup-NODE@v1
+      with:
+        node-version: ${{ env.NODE_CORE_VERSION }}
+        cache: "npm"
+        cache-dependency-path: package-lock.json
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18.x'
+    - name: npm install, build and test
+      run: |
+        npm config set fund false --location=global
+        npm install
+        npm i sharp
+        npm audit fix
+        npm run build  --if-present
+        npm run test --if-present
+      working-directory: ${{ env.PROJECT_PATH }}
+    
+    - name: Run Snyk to check for vulnerabilities
+      uses: actions/checkout@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+     
+  
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-          npm run test --if-present
+    - name: Publish Artifacts
+      uses: actions/upload-artifact@v1.0.0
+      with:
+        name: webapp
+        path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-      - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+  staging:
+    needs: build
+    name: Deploy to staging
+    environment:
+        name: staging
+        url: ${{ steps.deploy_staging.outputs.webapp-url }}
+    runs-on: ubuntu-latest
+    steps:
+    # Download artifacts
+    - name: Download artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: webapp
 
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v4
-        with:
-          name: node-app
-          path: release.zip
+    # Deploy to App Service Linux
+    - name: Deploy to Azure WebApp
+      uses: azure/webapps-deploy@v2
+      id: deploy_staging
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+        slot-name: staging
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: build
+    needs: staging
+    permissions:
+      contents: none
     environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+      name: production
+      url: ${{ steps.deploy_production.outputs.webapp-url }}
+    name: Deploy to production
+    runs-on: ubuntu-latest
     steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v4
-        with:
-          name: node-app
+    # Download artifacts
+    - name: Download artifacts
+      uses: actions/download-artifact@v2
+      with:
+        name: webapp
 
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-      
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: 'app-mothership'
-          slot-name: 'Production'
-          package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_84D9C44D31F64BBC8263B0A0951D571B }}
+    # Deploy to App Service Linux
+    - name: Deploy to Azure WebApp
+      id: deploy_production
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: ${{ env.AZURE_WEBAPP_NAME }}
+        publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
