--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -9,8 +9,7 @@ on:
     - '**/*.md'
     - '**/*.gitignore'
     - '**/*.gitattributes'
-    - '**/.next'
-    - 'node'
+    - '**node*'
   workflow_dispatch:
     inputs:
       logLevel:
