--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -109,7 +109,7 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
   staging:
-    needs: testing
+    needs: build
     name: Deploy to staging environment
     environment:
         name: staging
