--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -9,7 +9,8 @@ on:
     - '**/*.md'
     - '**/*.gitignore'
     - '**/*.gitattributes'
-    - '**node*'
+    - '*node_modules*'
+    - 'node_modules*'
   workflow_dispatch:
     inputs:
       logLevel:
@@ -35,7 +36,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: '.'
   CONFIGURATION: Release
   NODE_CORE_VERSION: '20.x'
-  PROJECT_PATH: '.'
+  PROJECT_PATH: 'src/'
   NODE_CLI_TELEMETRY_OPTOUT: 1
   NODE_SKIP_FIRST_TIME_EXPERIENCE: 1
   NODE_NOLOGO: true
