--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -91,23 +91,6 @@ jobs:
         name: webapp
         path: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
-  testing:
-    needs: build
-    name: Deploy to testing environment
-    environment:
-      name: testing
-      url: ${{ steps.deploy_testing.outputs.webapp-url }}
-    runs-on: ubuntu-latest
-    steps:
-          # Download artifacts
-    - name: Download artifacts
-      uses: actions/download-artifact@v2
-      with:
-        name: webapp
-    - name: Run Snyk to check for vulnerabilities
-      uses: actions/checkout@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
   staging:
     needs: build
@@ -122,6 +105,10 @@ jobs:
       uses: actions/download-artifact@v2
       with:
         name: webapp
+    - name: Run Snyk to check for vulnerabilities
+      uses: actions/checkout@master
+      env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
 
     # Deploy to App Service Linux
     - name: Deploy to Azure WebApp
@@ -131,16 +118,14 @@ jobs:
         app-name: ${{ env.AZURE_WEBAPP_NAME }}
         publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
         slot-name: staging
-      
-    - name: Run Snyk to check for vulnerabilities
-      uses: actions/checkout@master
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
   
   deploy:
     needs: staging
     permissions:
-      contents: none
+      actions: read
+      contents: read
+      statuses: read
+      security-events: write
     environment:
       name: production
       url: ${{ steps.deploy_production.outputs.webapp-url }}
