--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -1,3 +1,4 @@
+
 name: Frontmothership app deploy
 on:
   push:
@@ -36,7 +37,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: '.'
   CONFIGURATION: Release
   NODE_CORE_VERSION: '20.x'
-  PROJECT_PATH: 'src/'
+  PROJECT_PATH: '.'
   NODE_CLI_TELEMETRY_OPTOUT: 1
   NODE_SKIP_FIRST_TIME_EXPERIENCE: 1
   NODE_NOLOGO: true
@@ -67,8 +68,7 @@ jobs:
       uses: actions/setup-NODE@v1
       with:
         node-version: ${{ env.NODE_CORE_VERSION }}
-        cache: "npm"
-        cache-dependency-path: package-lock.json
+        
 
     - name: npm install, build and test
       run: |
