--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -37,7 +37,7 @@ env:
   AZURE_WEBAPP_PACKAGE_PATH: '.'
   CONFIGURATION: Release
   NODE_CORE_VERSION: '20.x'
-  PROJECT_PATH: '.'
+  PROJECT_PATH: 'frontend_mothership/'
   NODE_CLI_TELEMETRY_OPTOUT: 1
   NODE_SKIP_FIRST_TIME_EXPERIENCE: 1
   NODE_NOLOGO: true
@@ -72,10 +72,10 @@ jobs:
     - name: npm install, build and test
       run: |
         npm config set fund false --location=global
-        npm install
         npm i sharp
         npm audit fix
-        npm run build  
+        npm install
+        npm run build  --if-present
         npm run test --if-present
       working-directory: ${{ env.PROJECT_PATH }}
       
