update source path

--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -10,7 +10,7 @@ on:
     - '**/*.md'
     - '**/*.gitignore'
     - '**/*.gitattributes'
-    - 'node_modules/*'
+    - 'node_modules.tar.gz'
     - 'node_modules*'
   workflow_dispatch:
     inputs:
