--- a/.github/workflows/npm-publish-github-packages.yml
+++ b/.github/workflows/npm-publish-github-packages.yml
@@ -111,7 +111,7 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
   
   staging:
-    needs: build
+    needs: testing
     name: Deploy to staging environment
     environment:
         name: staging
