removed run dev script

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,28 +68,23 @@ stages:
         artifactName: 'drop'
         targetPath: '$(Build.ArtifactStagingDirectory)'        
     
-  # Step 2: Run Snyk security scan
+ # Step 2 integrate security scans into the CI/CD pipeline.
+  - job:
+    pool:
+      vmImage: ubuntu-latest
+  - job: SnykScan
+    displayName: 'SnykScan'
+    pool:
+      vmImage: ubuntu-latest
+    steps:
     - script: |
-        npm install -g snyk
-        snyk auth $(SNYK_TOKEN)
-         snyk test
-      displayName: 'Run Snyk Security Scan'
+        npm config set fund false --location=global
+        echo "Running Snyk security scan"
+        npm install -g snyk 
+      displayName: 'Run Snyk Scan'
       env:
-         SNYK_TOKEN: $(SNYK_TOKEN)
-
-          # Step 3: Analyze Snyk scan results
-    - task: Bash@3
-      displayName: 'Check Snyk Results'
-      inputs:
-         targetType: 'inline'
-         script: |
-            snyk test --json > snyk-report.json
-            if grep -q '"vulnerabilities": \[\]' snyk-report.json; then
-             echo "No vulnerabilities found."
-              else
-                  echo "Critical vulnerabilities found. Failing build."
-                  exit 1
-                fi
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      workingDirectory: $(System.DefaultWorkingDirectory)
  
 # Step 3: Approval to proceed to the testing environment
 - stage: TestDeployment
@@ -113,12 +108,12 @@ stages:
             
           - script: |
               echo "Running Integration Tests"
-              npm run test:integration
+              
             displayName: 'Run Integration Tests'
 
           - script: |
               echo "Running System Tests"
-              npm run test:system
+              
             displayName: 'Run System Tests'
 
           - task: PublishTestResults@2
@@ -132,7 +127,7 @@ stages:
                    
 - stage: Staging
   displayName: 'Deploy to Staging'
-  dependsOn: TestDeployment
+  dependsOn: BuildAndTest
   jobs:
   - deployment: DeployToStaging
     displayName: 'Deploy to Staging'
@@ -148,24 +143,27 @@ stages:
                     echo "Conduct UAT..."
                     # Replace with actual UAT commands if any
                 displayName: 'Conduct UAT'
-              
+ - script: |
+        npm install -g snyk
+        snyk auth $(SNYK_TOKEN)
+         snyk test
+      displayName: 'Run Snyk Security Scan'
+      env:
+         SNYK_TOKEN: $(SNYK_TOKEN)
 
-- stage: SecurityScan
-  displayName: 'Final Security Scanning'
-  dependsOn: Staging
-  condition: succeeded()
-  jobs:
-  - job: SnykScan
-    displayName: 'SnykScan'
-    pool:
-      vmImage: ubuntu-latest
-    steps:
-    - script: |
-        npm config set fund false --location=global
-        echo "Running Snyk security scan"
-        npm install -g snyk 
-      displayName: 'Run Snyk Scan'
-      workingDirectory: $(System.DefaultWorkingDirectory)
+          # Step 3: Analyze Snyk scan results
+    - task: Bash@3
+      displayName: 'Check Snyk Results'
+      inputs:
+         targetType: 'inline'
+         script: |
+            snyk test --json > snyk-report.json
+            if grep -q '"vulnerabilities": \[\]' snyk-report.json; then
+             echo "No vulnerabilities found."
+              else
+                  echo "Critical vulnerabilities found. Failing build."
+                  exit 1
+                fi            
   
 - stage: Production
   displayName: 'Deploy to Production'
