--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -130,7 +130,30 @@ stages:
             displayName: 'Publish Test Results'
 
              # Add deployment scripts/commands here (e.g., ARM templates, Kubernetes manifests)
-                   
+  # Step 5 integrate security scans into the CI/CD pipeline.
+   # Step 5: Run Snyk security scan
+    - script: |
+        npm install -g snyk
+        snyk auth $(SNYK_TOKEN)
+        snyk test
+      displayName: 'Run Snyk Security Scan'
+      env:
+         SNYK_TOKEN: $(SNYK_TOKEN)
+
+          # Step 3: Analyze Snyk scan results
+    - task: Bash@3
+      displayName: 'Check Snyk Results'
+      inputs:
+        targetType: 'inline'
+        script: |
+          snyk test --json > snyk-report.json
+                if grep -q '"vulnerabilities": \[\]' snyk-report.json; then
+                  echo "No vulnerabilities found."
+                else
+                  echo "Critical vulnerabilities found. Failing build."
+                  exit 1
+                fi     
+                        
 - stage: Staging
   displayName: 'Deploy to Staging'
   dependsOn: BuildAndTest
