--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -77,7 +77,7 @@ stages:
       displayName: 'Run Snyk Security Scan'
       env:
          SNYK_TOKEN: $(SNYK_TOKEN)
-
+       workingDirectory: '.'
          
  
 # Step 3: Approval to proceed to the testing environment
@@ -102,8 +102,15 @@ stages:
             
           - script: |
               echo "Running Integration Tests"
-              
             displayName: 'Run Integration Tests'
+          - script: |
+               npm install -g snyk
+               snyk auth $(SNYK_TOKEN)
+               snyk test
+           displayName: 'Run Snyk Security Scan'
+           env:
+           SNYK_TOKEN: $(SNYK_TOKEN)
+           workingDirectory: '.'
 
         
  
@@ -138,21 +145,8 @@ stages:
       displayName: 'Run Snyk Security Scan'
       env:
         SNYK_TOKEN: $(SNYK_TOKEN)
+      workingDirectory: '.'
 
-          # Step 3: Analyze Snyk scan results
-    - task: Bash@3
-      displayName: 'Check Snyk Results'
-      inputs:
-        targetType: 'inline'
-        script: |
-          snyk test --json > snyk-report.json
-                if grep -q '"vulnerabilities": \[\]' snyk-report.json; then
-                  echo "No vulnerabilities found."
-                else
-                  echo "Critical vulnerabilities found. Failing build."
-                  exit 1
-                fi 
-    
 
 - stage: Production
   displayName: 'Deploy to Production'
